correction liste collapse

--- a/src/sass/components/_collapse.scss
+++ b/src/sass/components/_collapse.scss
@@ -52,6 +52,9 @@
   p {
     padding: 0;
   }
+  .no-bullets {
+    list-style-type: none;
+  }
 }
 
 @media (max-width: 1024px) {
